kubernetes/apps/artemis-cluster/testing/nginx/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: testing
spec:
  selector:
    app: nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
